# AlignmentExamples

./: LICENSE
awk/: Makefile  README.md  nwalign.awk
c/: .gitignore  Makefile.am  configure.ac
c/src/: Makefile.am  blosum.h  main.c  nwalign.c  nwalign.h
c/tests/: Makefile.am  check_nwalign.c
cpp/src/: blosum.hpp  nwalign.cpp  nwalign.hpp
data/: hemoglobinA.fasta  hemoglobinB.fasta  myoglobin.fasta
go/: Makefile
go/src/: blosum.go  nwalign.go  nwalign_test.go
go/src/libnwalign/: blosum.go  fasta.go  nwalign.go  nwalign_test.go
go/src/nwalign/: main.go
java/: Makefile
java/src/main/java/com/github/natechols/nwalign/: NeedlemanWunsch.java
javascript/: blosum.js  nwalign.js  qunit.html  tests.js
perl/: Makefile  NWAlign.pm  tests.pl
python/: .gitignore  Makefile  setup.py
python/nwalign/: __init__.py  blosum.py  core.py  fasta.py  main.py
python/test/: test_nwalign.py
rust/: Cargo.toml  Makefile
rust/src/: fasta.rs  lib.rs  main.rs  nwalign.rs
scala/: Makefile  build.sbt
scala/project/: plugins.sbt
scala/src/main/scala/com/github/natechols/alignmentexamples/: Blosum.scala  Command.scala  Fasta.scala  NeedlemanWunsch.scala
scala/src/test/scala/: BlosumSpec.scala  FastaSpec.scala  NeedlemanWunschSpec.scala
test/: nwalign.t
